--- a/frontend/src/app/pages/launch/launch.component.html
+++ b/frontend/src/app/pages/launch/launch.component.html
@@ -1,8 +1,12 @@
 <form class="form-container" [formGroup]="launchForm">
     <div class="inputs">
-        <mat-form-field class="full-width" appearance="fill">
-          <mat-label>Id Categoria</mat-label>
-          <input matInput placeholder="Ex. Categoria" value="" formControlName="idCategoria">
+         <mat-form-field appearance="fill">
+            <mat-label>Categoria</mat-label>
+            <mat-select>
+              <mat-option *ngFor="let category of categories" [value]="category.id">
+                {{category.name}}
+              </mat-option>
+            </mat-select>
         </mat-form-field>
 
         <mat-form-field class="full-width" appearance="fill">
